--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,4 +9,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Akshar&family=Kalam&family=Orelega+One&family=Overpass:wght@300&family=Poppins:wght@100;200;500&family=Rubik+Moonrocks&family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
 {%block navbar%} {%include 'navbar.html'%} {%endblock%} 
 {%block content%}
-<!--nabar block -->
+<!--navbar block -->
