ft:created notespage

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,5 +8,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Akshar&family=Kalam&family=Orelega+One&family=Overpass:wght@300&family=Poppins:wght@100;200;500&family=Rubik+Moonrocks&family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
 {%block navbar%} {%include 'navbar.html'%} {%endblock%} 
-{%block content%}
+<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='styles.css')}}">
+	{% block title %}{% endblock %}
+</head>
+<body>
+	{% block content %}
+	{% endblock%}
+</body>
+</html>
+
 <!--navbar block -->
