ft:user authentification

--- a/app/templates/notes_update.html
+++ b/app/templates/notes_update.html
@@ -14,7 +14,7 @@
 <div class="content">
 	
 	<h2 class="headline">
-		Update HTML
+		Update Notes
 	</h2>
 	<form class="update_task" method="POST" action="/update/{{task.id}}" >
 		<input type="text" name="content" id="content" value="{{task.task}}">
